--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ingreso-gym",
+  "name": "worldgym",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -14,6 +14,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.5.3",
+    "bundle": "^2.1.0",
+    "electron-reload": "*",
+    "jquery": "^3.4",
     "nodemon": "^2.0.6",
     "promise-mysql": "^4.1.3"
   }
