--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^10.1.5"
+    "electron": "^10.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "alertify": "^0.3.0",
     "bootstrap": "^4.5.3",
     "bundle": "^2.1.0",
+    "datatables.net-buttons-bs4": "^1.6.5",
     "electron-reload": "*",
     "jquery": "^3.4",
     "nodemon": "^2.0.6",
-    "promise-mysql": "^4.1.3"
+    "promise-mysql": "^4.1.4"
   }
 }
