--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worldgym",
+  "name": "pos",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -16,7 +16,7 @@
     "bootstrap": "^4.6.0",
     "bundle": "^2.1.0",
     "datatables.net-buttons-bs4": "^1.6.5",
-    "fs-path": "^0.0.25",
+    "electron-reload": "^1.5.0",
     "jquery": "^3.4",
     "nodemon": "^2.0.7",
     "promise-mysql": "^4.1.4"
